@@ -29,6 +29,7 @@ A copy of this license can be found in the LICENSE.text file.
       $(function() {
         $('.error').hide(); 
         $('#pointer').hide(); 
+        BD18.redirectURL = "board18Main.php";
         $("#login").submit(function() {  
           login();
           return false;
