@@ -1,5 +1,7 @@
-include.path=${php.global.include.path}
-php.version=PHP_55
+browser.reload.on.save=true
+include.path=\
+    ${php.global.include.path}
+php.version=PHP_56
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
