@@ -5,8 +5,8 @@
  * It starts a php session and then checks to see that the player is
  * logged in and has been active sometime in the last day.
  */
-	//Start session
-	session_start();
+  //Start session
+  session_start();
   if (isset($_SESSION['LAST_ACTIVITY']) && 
           (time() - $_SESSION['LAST_ACTIVITY'] > 86400)) { // 1 day
     // last request was more than one day ago
@@ -14,12 +14,16 @@
     session_destroy();   // destroy session data in storage
   }
   $_SESSION['LAST_ACTIVITY'] = time(); // update last activity time stamp
-	//Check whether the session variable SESS_PLAYER_ID is present or not
-	if(!isset($_SESSION['SESS_PLAYER_ID']) || 
-          (trim($_SESSION['SESS_PLAYER_ID']) == '')) { // not present
-  	header("location: access-denied.html");
-		exit;
-	} else { // present
+  //Check whether the session variable SESS_PLAYER_ID is present or not
+  if(!isset($_SESSION['SESS_PLAYER_ID']) || 
+  (trim($_SESSION['SESS_PLAYER_ID']) == '')) { // not present
+    $URLraw = $_SERVER['REQUEST_URI'];
+    $URLindex = strrpos($URLraw,"/");
+    $URLin = substr($URLraw,$URLindex+1);
+    setcookie("RedirectCookie", $URLin);
+    header("location: access-denied.html");
+    exit;
+  } else { // present
     $loggedinplayer = $_SESSION['SESS_PLAYER_ID'];
     $welcomename = $_SESSION['SESS_FIRST_NAME'];
     $headermessage = $_SESSION['SESS_HEADER_MESSAGE'];
