@@ -32,6 +32,8 @@
             WIKI</a></li>
         <li><a href="http://wiki.board18.org/w/BOARD18_Repositories">
             Repositories</a></li>
+        <li><a href="http://library.board18.org/">
+            Library</a></li>
         <li><a href="http://bugs.board18.org/">
             Issue Tracker</a></li>
         <li><a href="http://wiki.board18.org/w/Download_BOARD18">
